# binance-ai-bot

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  ROADMAP.md  manual_root.sqlite-journal  manual_root_str.sqlite-journal  probe5.sqlite-journal  probe6.sqlite-journal  pyproject.toml  requirements.txt  tests_runtime.sqlite  wal_probe_f467f20a52744a18a591ca718f63df20.sqlite-journal
app/: main.py
app/ai/: __init__.py  (+14 more)
binance_ai_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: Dockerfile
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: bootstrap.sh
tests/: test_adaptive_recommendations.py  test_ai_evaluation.py  test_ai_signal.py  test_binance_rest.py  test_bot_api.py  test_dashboard_api.py  test_features.py  test_fusion_signal.py  test_futures_opportunity_scanner.py  test_health.py  test_historical_backfill.py  test_live_paper_runtime.py  test_market_data_parsing.py  test_market_sentiment.py  test_outcome_review.py  test_paper_execution.py  test_pattern_analysis.py  test_performance_metrics.py  test_profile_calibration.py  test_regime_analysis.py  test_risk.py  test_settings.py  test_signal_validation.py  test_similar_setups.py  test_storage.py  test_strategy_runner.py  test_stream_manager.py  test_symbol_sentiment.py  test_technical_analysis.py  test_trade_eligibility.py  test_trade_quality_metrics.py  test_trend_following_strategy.py  (+1 more)
(+719 files in other folders)
